# NED_FastAPI

Ned_Fastapi/: README.md  pyproject.toml
Ned_Fastapi/ned_fastapi/: main.py  main1.py  main2.py  main3.py  main4.py  main5.py  request.ipynb
Ned_Fastapi/tests/: main_test.py
