[tool.poetry]
name = "ned-fastapi"
version = "0.1.0"
description = ""
authors = ["syedaromi <141348046+syedaromi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.111.0"
requests = "^2.32.3"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
httpie = "^3.2.2"
pytest = "^8.2.2"
pandas = "^2.2.2"
cv = "^1.0.0"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
